--- a/IsraelDefenseForce/IsraelDefenseForce.csproj
+++ b/IsraelDefenseForce/IsraelDefenseForce.csproj
@@ -43,8 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="F16FighterJet.cs" />
+    <Compile Include="Hamas.cs" />
+    <Compile Include="Hermes460Drone.cs" />
+    <Compile Include="IDF.cs" />
+    <Compile Include="IntelligenceUnit.cs" />
+    <Compile Include="M109Artillery.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StrikeUnit.cs" />
+    <Compile Include="Terrorist.cs" />
+    <Compile Include="TerroristReport.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
