--- a/IsraelDefenseForce/IsraelDefenseForce.csproj
+++ b/IsraelDefenseForce/IsraelDefenseForce.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attack.cs" />
+    <Compile Include="DisplayingTheTerrorist%27sDetails.cs" />
     <Compile Include="F16FighterJet.cs" />
     <Compile Include="Hamas.cs" />
     <Compile Include="Hermes460Drone.cs" />
     <Compile Include="IDF.cs" />
     <Compile Include="IntelligenceUnit.cs" />
+    <Compile Include="LestReport.cs" />
     <Compile Include="M109Artillery.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
